Adicionando nova dependencia da classe de imagem ao composer

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,6 @@
   ],
   "require": {
     "dindigital/din": "dev-master",
-    "spekkionu/wideimage": "dev-master"
+    "imagine/imagine": "dev-master"
   }
 }
