--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
   ],
   "require": {
     "dindigital/din": "dev-master",
-    "imagine/imagine": "dev-master"
+    "imagine/imagine": "dev-master",
+    "phpmailer/phpmailer": "dev-master"
   }
 }
