Implementação de sistema de link em vídeo

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "dindigital/din": "dev-master",
     "imagine/imagine": "dev-master",
     "phpmailer/phpmailer": "dev-master",
-    "Respect/Validation": "dev-master"
+    "Respect/Validation": "dev-master",
+    "phpoffice/phpexcel": "dev-master"
   }
 }
