Trabalhando com o compressor dentro da public

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "phpmailer/phpmailer": "dev-master",
     "Respect/Validation": "dev-master",
     "phpoffice/phpexcel": "dev-master",
-    "dg/twitter-php": "dev-master"
+    "dg/twitter-php": "dev-master",
+    "kriswallsmith/assetic" : "dev-master"
   }
 }
