Atualização do FacebookpostModel

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "Respect/Validation": "dev-master",
     "phpoffice/phpexcel": "dev-master",
     "dg/twitter-php": "dev-master",
-    "kriswallsmith/assetic" : "dev-master"
+    "kriswallsmith/assetic" : "dev-master",
+    "facebook/php-sdk": "@stable"
   }
 }
