--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "dg/twitter-php": "dev-master",
     "kriswallsmith/assetic" : "dev-master",
     "facebook/php-sdk": "@stable",
-    "ise/php-soundcloud": "3.*"
+    "ise/php-soundcloud": "3.*",
+    "google/apiclient": "dev-master"
   }
 }
