--- a/config/routes.ini
+++ b/config/routes.ini
@@ -1,6 +1,6 @@
 ; ROTAS DO SITE
-routes[] = [get, /noticias/, src\app\site\controllers\NewsListController]
-routes[] = [get, /noticias/*, src\app\site\controllers\NewsController]
-routes[] = [get, /*/*, src\app\site\controllers\PageController]
-routes[] = [get, /*, src\app\site\controllers\PageCatController]
-routes[] = [get, /, src\app\site\controllers\IndexController]
+routes[] = [get, /noticias/, Site\Controllers\NewsListController]
+routes[] = [get, /noticias/*, Site\Controllers\NewsController]
+routes[] = [get, /*/*, Site\Controllers\PageController]
+routes[] = [get, /*, Site\Controllers\PageCatController]
+routes[] = [get, /, Site\Controllers\IndexController]
