Altera nome do config.ini para di.ini pois tem mais a ver com dependence injection do que com config (para nao confundir com o outro config) Joga admin_routes.php dentro da pasta config

--- a/config/di.ini
+++ b/config/di.ini
@@ -5,5 +5,5 @@ config_files[] = 'config/config.global.php'
 config_files = [config_files]
 
 [router Respect\Rest\Router]
-autoDispatched = true
+autoDispatched = false
 classRoute     = [routes]
