--- a/config/di.ini
+++ b/config/di.ini
@@ -1,8 +1,8 @@
-config_files[] = 'config/config.local.php'
-config_files[] = 'config/config.global.php'
+config[] = 'config/config.local.php'
+config[] = 'config/config.global.php'
 
 [dinconfig Din\Config\Config]
-config_files = [config_files]
+config_files = [config]
 
 [router Respect\Rest\Router]
 autoDispatched = false
